fix(client): avatar mobile align

--- a/client/stylesheets/profile.scss
+++ b/client/stylesheets/profile.scss
@@ -29,6 +29,7 @@
     position: relative;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     //@media screen and (max-width: $break-xs-narrow) {
     //  flex-wrap: wrap;
     //}
